# python-project-template

./: .dockerignore  .gitignore  .secrets.baseline  404.html  AGENTS.md  CHANGELOG.md  CHANGELOG.md.template  Dockerfile  EPICS.md  EPICS.md.template  FLOW.md  LICENSE  README.md  README.md.template  TODO.md  TODO.md.template  WORK.md  branding.md  cookiecutter.json  discovery.md  docker-compose.prod.yml  docker-compose.yml  feedback.md  glossary.md  index.html  main.py  objects.inv  ppt.html  project_defaults.json  pyproject.toml  readme.html  reference.html  search.js  setup_project.py  sitemap.xml  template-config.yaml  tests.html  validate-docker.py
.flowr/: .gitignore  feature-flow.yaml  scope-cycle.yaml
.flowr/flows/: arch-cycle.yaml  architecture-flow.mermaid  architecture-flow.yaml  branding-flow.mermaid  branding-flow.yaml  define-flow.yaml  deliver-flow.yaml  delivery-flow.mermaid  delivery-flow.yaml  delivery-flow.yaml.mermaid  develop-flow.yaml  development-flow.mermaid  development-flow.yaml  development-flow.yaml.mermaid  discovery-flow.mermaid  discovery-flow.yaml  document-dependencies.yaml  feature-development-flow.mermaid  feature-development-flow.yaml  feature-development-flow.yaml.mermaid  feature-flow.yaml  main-flow.mermaid  main-flow.yaml  main-flow.yaml.mermaid  planning-flow.mermaid  planning-flow.yaml  planning-flow.yaml.mermaid  post-mortem-flow.mermaid  post-mortem-flow.yaml  review-gate-flow.mermaid  review-gate-flow.yaml  scope-cycle.yaml  setup-project-flow.mermaid  setup-project-flow.yaml  spec-validation-flow.yaml  tdd-cycle-flow.mermaid  tdd-cycle-flow.yaml  tdd-cycle-flow.yaml.mermaid  tdd-cycle.yaml
.flowr/sessions/: doc-audit.yaml
.flowr/viz/: app.js  generate-flowviz-data.py  index.html
.github/: dependabot.yml
.github/workflows/: check-code.yaml  ci.yml  codeql.yml  dependency-review.yml  docker-image.yml  pypi-publish.yml  release-docker-image.yaml  tag-release.yml  template-ci.yml
.opencode/agents/: architect.md  design-agent.md  designer.md  developer.md  (+13 more)
.templates/: CHANGELOG.md.template  TODO.md.template
adr/: ADR-2026-04-22-version-source.md
api/: app.html  index.html  search.js
app/: __main__.py  version.py
branding/: branding.md
coverage/: class_index.html  function_index.html  index.html  status.json  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698___main___py.html
docs/: academic_research.md  architecture.md  branding.md  container.md  context.md  discovery.md  discovery_journal.md  glossary.md  index.html  product_definition.md  scope_journal.md  system.md  workflow.md
features/: cli_entrypoint.feature
hooks/: post_gen_project.py
pingpong/: game_loop.py
post-mortem/: PM_20260501_missing-feature-test-template.md  PM_20260501_reviewer-fixing-code.md
ppt/: ppt.html
python-project-template/: AGENTS.md  Dockerfile  TODO.md  index.html  pyproject.toml  python_package_template.html
python_package_template/: __init__.py  python_module_template.py
research/: ai-agents.md  cognitive-science.md  domain-modeling.md  oop-design.md  testing.md
scenarios/: simple_calculation.html
scripts/: assign_ids.py  check_adrs.py  check_commit_messages.py  check_feature_file.py  check_files.py  check_knowledge.py  check_oc.py  check_stubs.py  check_variables.py  check_version.py  check_work_md.py  detect_state.py  score_features.py  template_test.sh  update_index_html.py  validate_cookiecutter.py  validate_projects.py  validate_yaml.py
search/: search_index.json
tests/: conftest.py  report.html  version_test.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  EPICS.md  LICENSE  LICENSE.txt  README.md  TODO.md  main.py  noxfile.py  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: check-code.yaml  release-docker-image.yaml  test-docker-image.yaml
{{cookiecutter.project_slug}}/.opencode/agents/: architect.md  developer.md  overseer.md  repo-manager.md  requirements-gatherer.md
{{cookiecutter.project_slug}}/.opencode/skills/code-quality/: SKILL.md
{{cookiecutter.project_slug}}/.opencode/skills/create-agent/: SKILL.md
{{cookiecutter.project_slug}}/.opencode/skills/create-skill/: SKILL.md
{{cookiecutter.project_slug}}/.opencode/skills/feature-definition/: SKILL.md
{{cookiecutter.project_slug}}/.opencode/skills/git-release/: SKILL.md
{{cookiecutter.project_slug}}/.opencode/skills/implementation/: SKILL.md
{{cookiecutter.project_slug}}/.opencode/skills/pr-management/: SKILL.md
{{cookiecutter.project_slug}}/.opencode/skills/prototype-script/: SKILL.md
{{cookiecutter.project_slug}}/.opencode/skills/reference/: test-patterns.md
{{cookiecutter.project_slug}}/.opencode/skills/session-workflow/: SKILL.md
{{cookiecutter.project_slug}}/.opencode/skills/signature-design/: SKILL.md
{{cookiecutter.project_slug}}/.opencode/skills/tdd/: SKILL.md
{{cookiecutter.project_slug}}/.opencode/skills/tdd-bdd/: SKILL.md
{{cookiecutter.project_slug}}/acceptance-criteria/: simple_calculation.feature
{{cookiecutter.project_slug}}/acceptance-scenarios/: simple_calculation.feature
{{cookiecutter.project_slug}}/docs/: gen_pages.py  mkdocs.yaml
{{cookiecutter.project_slug}}/docs/docs/: reference.md  tests.md
{{cookiecutter.project_slug}}/docs/uml/artifacts/: classes_{{cookiecutter.package_name}}.dot  packages_{{cookiecutter.package_name}}.dot
{{cookiecutter.project_slug}}/features/: simple_calculation.feature
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: {{cookiecutter.module_name}}.py
{{cookiecutter.project_slug}}/tests/: __init__.py  basic_test.py  conftest.py  {{cookiecutter.package_name}}_test.py
{{cookiecutter.project_slug}}/tests/scenarios/: conftest.py
{{cookiecutter.project_slug}}/tests/scenarios/steps/: simple_calculation_test.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  {{cookiecutter.module_name}}.py
(+411 files in other folders)
