[project]
name = "test-project"
version = "3.0.20260414"
description = "A test project"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Test Author", email = "testuser@users.noreply.github.com" }
]
maintainers = [
    { name = "Test Author", email = "testuser@users.noreply.github.com" }
]
dependencies = [
    "fire>=0.7.1",
]

[project.urls]
Repository = "https://github.com/testuser/test-project"
Documentation = "https://github.com/testuser/test-project/tree/main/docs/api/"

[project.optional-dependencies]
dev = [
    "pdoc>=14.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.5",
    "taskipy>=1.14.1",
    "hypothesis>=6.148.4",
    "pyright>=1.1.407",
    "ghp-import>=2.1.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff.lint]
ignore = []
select = [
  "A",
  "ANN",
  "ASYNC",
  "B",
  "C4",
  "C9",
  "D",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FURB",
  "G",
  "I",
  "ICN",
  "LOG",
  "N",
  "NPY",
  "PD",
  "PT",
  "PTH",
  "R",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TD",
  "W",
]
preview = true
mccabe.max-complexity = 10
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "D205", "D212", "D415", "D100", "D103"]

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: isolated tests for a single function or class",
    "integration: tests covering multiple components together",
]
addopts = """
--maxfail=10 \
--color=yes \
--tb=short \
-q \
--html=docs/tests/report.html \
"""
testpaths = ["tests"]
python_files = ["*_test.py"]
python_functions = ["test_*"]
render_collapsed = "all"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.taskipy.tasks]
run = "python -m app"
test-report = """\
pytest \
  --doctest-modules \
  --cov-config=pyproject.toml \
  --cov-report html:docs/coverage \
  --cov-report term:skip-covered \
  --cov=app \
  --cov-fail-under=100 \
  --hypothesis-show-statistics \
"""
test = """\
pytest -m "not slow" -q && \
task test-report\
"""
test-fast = "pytest -m \"not slow\" -q"
test-slow = "pytest -m slow"
ruff-check = "ruff check . --fix"
ruff-format = "ruff format ."
ruff-format-check = "ruff format . --check"
lint = "task ruff-check && task ruff-format"
doc-serve = "pdoc ./app --host localhost --port 8080"
doc-build = """\
pdoc ./app -o docs/api --search && \
pytest \
  --cov-config=pyproject.toml \
  --cov-report html:docs/coverage \
  --cov=app \
  --html=docs/tests/report.html \
  --self-contained-html \
  -q \
"""
doc-publish = "task doc-build && ghp-import -n -p -f docs"
static-check = "pyright"

[dependency-groups]
dev = [
    "safety>=3.7.0",
]
