[project]
name = "python-project-template"
version = "6.3.20260419"
description = "Python template with some awesome tools to quickstart any Python project"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "eol", email = "nullhack@users.noreply.github.com" }
]
maintainers = [
    { name = "eol", email = "nullhack@users.noreply.github.com" }
]
dependencies = [
    "fire>=0.7.1",
]

[project.urls]
Repository = "https://github.com/nullhack/python-project-template"
Documentation = "https://github.com/nullhack/python-project-template/tree/main/docs/api/"

[project.optional-dependencies]
dev = [
    "pdoc>=14.0",
    "pytest>=9.0.3",
    "pytest-beehave[html]>=3.3,<4",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.11",
    "taskipy>=1.14.1",
    "hypothesis>=6.148.4",
    "pyright>=1.1.407",
    "ghp-import>=2.1.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff.lint]
ignore = []
select = [
  "A",
  "ANN",
  "ASYNC",
  "B",
  "C4",
  "C9",
  "D",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FURB",
  "G",
  "I",
  "ICN",
  "LOG",
  "N",
  "NPY",
  "PD",
  "PT",
  "PTH",
  "R",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TD",
  "W",
]
preview = true
mccabe.max-complexity = 10
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "D205", "D212", "D415", "D100", "D103"]
".opencode/skills/**/scripts/*.py" = ["T20"]

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "deprecated: marks tests for deprecated AC; automatically skipped (deselect with '-m \"not deprecated\"')",
    "bug: marks tests that reproduce a reported defect (deselect with '-m \"not bug\"')",
]
addopts = """
--maxfail=10 \
--color=yes \
--tb=short \
-q \
"""
testpaths = ["tests"]
python_files = ["*_test.py"]
python_functions = ["test_*"]
render_collapsed = "all"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.taskipy.tasks]
run = "python -m app"
test-coverage = """\
pytest \
  --cov-config=pyproject.toml \
  --cov=app \
  --cov-fail-under=100 \
  --tb=no
"""
test-build = """\
pytest \
  -p no:beehave \
  --doctest-modules \
  --cov-config=pyproject.toml \
  --cov-report html:docs/coverage \
  --cov-report term:skip-covered \
  --cov=app \
  --cov-fail-under=100 \
  --hypothesis-show-statistics \
  --html=docs/tests/report.html \
  --self-contained-html \
"""
test = "pytest --tb=short"
test-fast = "pytest -m \"not slow\" -q --no-header --tb=no"
test-slow = "pytest -m slow"
ruff-check = "ruff check . --fix"
ruff-format = "ruff format ."
ruff-format-check = "ruff format . --check"
lint = "task ruff-check && task ruff-format"
doc-serve = "pdoc ./app --host localhost --port 8080"
doc-build = """\
pdoc ./app -o docs/api --search && \
pytest \
  --cov-config=pyproject.toml \
  --cov-report html:docs/coverage \
  --cov=app \
  --html=docs/tests/report.html \
  --self-contained-html \
  -q \
"""
doc-publish = "task doc-build && ghp-import -n -p -f docs"
static-check = "pyright"

[dependency-groups]
dev = [
    "gherkin-official>=39.0.0",
    "safety>=3.7.0",
]

[tool.beehave]
features_path = "docs/features"
