[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" }
]
maintainers = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" }
]
dependencies = [
    "dotenv>=0.9.9",
    "fire>=0.7.1",
]

[project.urls]
Repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"
Documentation = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}/tree/main/docs/api/"

[project.optional-dependencies]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-material>=9.6.11",
    "mkdocstrings[python]>=0.29.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-html>=4.1.1",
    "ruff>=0.11.5",
    "taskipy>=1.14.1",
    "hypothesis>=6.148.4",
    "cosmic-ray>=8.4.3",
]

[tool.setuptools]
packages = ["{{cookiecutter.package_name}}"]

[tool.ruff.lint]
ignore = []
select = [
  "A", 
  "ANN", 
  "ASYNC", 
  "B", 
  "C4", 
  "C9", 
  "D", 
  "DTZ", 
  "E", 
  "ERA", 
  "F", 
  "FURB", 
  "G", 
  "I", 
  "ICN", 
  "LOG", 
  "N", 
  "NPY", 
  "PD", 
  "PT", 
  "PTH", 
  "R", 
  "RUF", 
  "S", 
  "SIM", 
  "T20", 
  "TD", 
  "W",
]
preview = true
mccabe.max-complexity = 10
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit",
    "integration",
    "system",
    "acceptance",
    "regression",
    "smoke",
    "sanity",
    "performance",
    "security",
    "performance",
]
addopts = """
--maxfail=1 \
--color=yes \
"""
testpaths = [
    "tests",
    "{{cookiecutter.package_name}}"
]
python_files = ["*_test.py"]
python_functions = ["test_*"]
render_collapsed = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
    ]

[tool.taskipy.tasks]
run = "python -m {{cookiecutter.package_name}}.{{cookiecutter.module_name}}"
test-report = """\
pytest \
  --doctest-modules \
  --cov-config=pyproject.toml \
  --cov-report html:docs/htmlcov \
  --cov-report term:skip-covered \
  --cov={{cookiecutter.package_name}} \
  --cov-fail-under={{cookiecutter.minimum_coverage}} \
  --html=docs/pytest_report.html \
  --self-contained-html \
  --hypothesis-show-statistics \
"""
test = """\
python -c "import subprocess, sys; print('Running Smoke Tests...'); sys.exit(0 if subprocess.run(['pytest', '-m', 'smoke']).returncode in (0,5) else 1)" && \
python -c "import subprocess, sys; print('Running Unit Tests...'); sys.exit(0 if subprocess.run(['pytest', '-m', 'unit']).returncode in (0,5) else 1)" && \
python -c "print('Running Tests...');" && \
task test-report\
"""
ruff-check = "ruff check . --fix"
ruff-format = "ruff format ."
lint = "task ruff-check && task ruff-format"
doc-serve = "mkdocs serve --use-directory-urls -f docs/mkdocs.yaml"
doc-report = "mkdocs build --no-directory-urls -f docs/mkdocs.yaml"
doc-publish = """mkdocs gh-deploy \
--config-file docs/mkdocs.yaml \
--no-directory-urls \
--remote-branch docs"""
mut-report = """
  uv run cosmic-ray new-config mut.toml && \
  uv run cosmic-ray init mut.toml mut.sqlite && \
  uv run cosmic-ray --verbosity=INFO baseline mut.toml && \
  uv run cosmic-ray exec mut.toml mut.sqlite && \
  uv run cr-html mut.sqlite > docs/mut_report.html && \
  rm mut.toml && \
  rm mut.sqlite
"""
